Bug 372062: Auto values for right and bottom in CSS clip rect broken. r+sr=roc.